added map to guides.

--- a/ojoalplato/templates/blog/wpfamily/base.html
+++ b/ojoalplato/templates/blog/wpfamily/base.html
@@ -1,4 +1,4 @@
-{% load static content_filters google_analytics %}
+{% load static content_filters google_analytics l10n %}
 
 <!DOCTYPE html>
 <html lang="es-ES" prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/Article">
