--- a/ojoalplato/templates/cards/templatetags/restaurant_full.html
+++ b/ojoalplato/templates/cards/templatetags/restaurant_full.html
@@ -2,7 +2,7 @@
 
 <div class="row">
             <div class="col-sm-3 map">
-                <a href="{{ card.google_maps_url }}" target="_blank">
+                <a href="{{ restaurant.google_maps_url }}" target="_blank">
                     <img src="{% google_static_map restaurant.get_position_wgs84 235 201 13 %}" class="img-fluid">
                 </a>
             </div>
