fixed guide suns representation

--- a/ojoalplato/templates/guide/templatetags/restaurant.html
+++ b/ojoalplato/templates/guide/templatetags/restaurant.html
@@ -1,4 +1,4 @@
-{% load card_tags likert_bs_stars content_filters %}
+{% load guide_tags card_tags content_filters %}
 
         <div id="{{ restaurant.slug }}" class="featured-image-family" style="position: relative; top: 0;
         {% if restaurant.image_header %}
