--- a/ojoalplato/templates/guide/guide_detail.html
+++ b/ojoalplato/templates/guide/guide_detail.html
@@ -21,7 +21,7 @@
                                            rel="bookmark">{{ guide.title }}</a></h2>
                 <div class="meta"><span class="posted-on">
                       {% if user.is_superuser or user.is_staff %}
-                        &nbsp;&nbsp;<a href="{% url 'admin:guide_guide_change' guide.id %}" type="button"
+                          <a href="{% url 'admin:guide_guide_change' guide.id %}" type="button"
                                        class="btn btn-default btn-xs btn-edit">Editar</a>
                     {% endif %}
                 </span></div>
@@ -52,7 +52,7 @@
 
             {% for restaurant in guide.restaurants.all %}
             <div class="entry-content">
-                {% render_restaurant_full restaurant %}
+                {% guide_render_restaurant_full restaurant %}
             </div><!-- .entry-content -->
               <div style="margin-left:60px; margin-right:60px; border-bottom:1px solid #ccc; margin-bottom:20px;">
               <a href="#indice"><i class="fa-solid fa-circle-arrow-up" style="color: chocolate;"></i></a>
@@ -91,8 +91,8 @@ window.addEventListener("map:init", function (e) {
 
             const coordenadas = [
               {% for rest in guide.restaurants.all %}
-                { lat: {{ rest.get_position_wgs84.1 |floatformat:"-18"}},
-                  lng: {{ rest.get_position_wgs84.0 |floatformat:"-18"}} },
+                { lat: {{ rest.get_position_wgs84.1 |floatformat:"-18"|parse_float_to_str }},
+                  lng: {{ rest.get_position_wgs84.0 |floatformat:"-18"|parse_float_to_str }} },
               {% endfor %}
             ];
 
@@ -121,19 +121,16 @@ window.addEventListener("map:init", function (e) {
 </script>
   <script src="{% static 'bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js' %}"
         type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/fontawesome.min.js" integrity="sha512-64O4TSvYybbO2u06YzKDmZfLj/Tcr9+oorWhxzE3yDnmBRf7wvDgQweCzUf5pm2xYTgHMMyk5tW8kWU92JENng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% endblock javascript %}
 
 {% block css %}
     {{ block.super }}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     {% leaflet_css %}
     <link href="{% static 'bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css' %}"
           rel="stylesheet" type="text/css" media="all"/>
     <link href="{% static 'bower_components/leaflet.fullscreen/Control.FullScreen.css' %}"
           rel="stylesheet" type="text/css" media="all"/>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 {% endblock css %}
 
 {% block css_custom %}
