--- a/ojoalplato/templates/cards/templatetags/restaurant_full.html
+++ b/ojoalplato/templates/cards/templatetags/restaurant_full.html
@@ -142,6 +142,6 @@
                     </tr>
                     </tbody>
                 </table>
-
+                <p>{{ restaurant.guide_notes }}</p>
             </div>
         </div>
