--- a/ojoalplato/templates/blog/wpfamily/base.html
+++ b/ojoalplato/templates/blog/wpfamily/base.html
@@ -126,8 +126,8 @@
                 <ul class="family-list">
                     <li><a href="{% url 'cards:map-list' %}">
                         <div class="circle"
-                             style="background-image:url({% static 'wpfamily/img/mapa.png' %})"></div>
-                        <div class="name" style="max-width: 128px;">Buscador de Restaurantes</div>
+                             style="background-image:url({% static 'images/fork_map.png' %})"></div>
+                        <div class="name" style="max-width: 128px;">Mapa y Guías</div>
                     </a></li>
                     <li><a href="{% url "category-list" category="restaurantes" %}">
                         <div class="circle"
