--- a/ojoalplato/static/wpfamily/style4b68.css
+++ b/ojoalplato/static/wpfamily/style4b68.css
@@ -2889,6 +2889,7 @@ form label {
 }
 
 .circle-img img {
-  width: 100%; /* Ajusta la imagen al tamaño del contenedor circular */
-  height: auto;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
 }
