fixed repeated restaurant description in guides

--- a/ojoalplato/templates/cards/templatetags/restaurant_full.html
+++ b/ojoalplato/templates/cards/templatetags/restaurant_full.html
@@ -142,6 +142,8 @@
                     </tr>
                     </tbody>
                 </table>
+                {% if show_description %}
                 <p>{{ restaurant.guide_notes }}</p>
+                {% endif %}
             </div>
         </div>
