--- a/ojoalplato/templates/guide/templatetags/restaurant.html
+++ b/ojoalplato/templates/guide/templatetags/restaurant.html
@@ -24,7 +24,7 @@
             <div class="entry-content text-center">
                 <p>{{ restaurant.guide_notes }}</p>
 
-                {% render_restaurant restaurant %}
+                {% render_restaurant  restaurant show_description=False %}
 
             </div><!-- .entry-content -->
 
