Changed restaurant serializer to make it faster

--- a/ojoalplato/templates/blog/wpfamily/map_list.html
+++ b/ojoalplato/templates/blog/wpfamily/map_list.html
@@ -146,7 +146,7 @@
       html += '<img class="card-img-top" src="' + image + '" alt="Restaurant featured image">'
       html += '<div class="card-body">'
       html += '<h5 class="card-title">'
-      html += "<a href='" + url + "'><b style='color:chocolate;'>" + name + "</b></a></h5></div></div>"
+      html += "<a href='" + url + "'><b style='color:chocolate; text-decoration: none'>" + name + "</b></a></h5></div></div>"
 
       return html
     }
