fixed bug when empty description

--- a/ojoalplato/templates/blog/wpfamily/map_list.html
+++ b/ojoalplato/templates/blog/wpfamily/map_list.html
@@ -18,7 +18,7 @@
 {% endblock css_custom %}
 
 {% block content %}
-    <div class="row">
+    <div class="row hentry">
 
     <div class="col-md-6 article-padding" style="padding-left: 40px; padding-right: 40px;">
       <div class="row">
