fixing card img size

--- a/ojoalplato/templates/blog/wpfamily/map_list.html
+++ b/ojoalplato/templates/blog/wpfamily/map_list.html
@@ -18,7 +18,7 @@
 {% endblock css_custom %}
 
 {% block content %}
-    <div class="row hentry">
+    <div class="row">
 
     <div class="col-md-6 article-padding" style="padding-left: 40px; padding-right: 40px;">
       <div class="row">
@@ -142,7 +142,7 @@
     });
 
     gencard = function (name, image, url) {
-      let html = '<div class="card" style="width: 12rem;">'
+      let html = '<div class="card hentry" style="width: 12rem;">'
       html += '<img class="card-img-top" src="' + image + '" alt="Restaurant featured image">'
       html += '<div class="card-body">'
       html += '<h5 class="card-title">'
